created all mechanics endpoint in swagger, fixed pagination code block in all mechanics route to be optional, changed pagination in all customers route to be optional
